all errors resolved